added and updated

--- a/Week09/Q1.md
+++ b/Week09/Q1.md
@@ -2,55 +2,388 @@
 
 ## 1.	Write a C program to read the elements of 1-d array using pointers and print them in reverse order using pointers.
 ```c
-Solution
+#include <stdio.h>
+
+int main() {
+    int n, i;
+    
+    printf("Enter number of elements: ");
+    scanf("%d", &n);
+
+    int arr[n];
+    int *ptr = arr;
+
+    // Reading array elements using pointers
+    printf("Enter %d elements:\n", n);
+    for(i = 0; i < n; i++) {
+        scanf("%d", (ptr + i));
+    }
+
+    // Printing in reverse order using pointers
+    printf("Array in reverse order:\n");
+    for(i = n - 1; i >= 0; i--) {
+        printf("%d ", *(ptr + i));
+    }
+
+    return 0;
+}
+
 ```
 ## 2.	Write a C Program to insert a sub string into main string at a given position.
 ```c
-Solution
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+    char mainStr[200], subStr[100], result[300];
+    int pos, i, j;
+
+    printf("Enter the main string: ");
+    fgets(mainStr, sizeof(mainStr), stdin);
+    mainStr[strcspn(mainStr, "\n")] = '\0';  // remove trailing newline
+
+    printf("Enter the substring to insert: ");
+    fgets(subStr, sizeof(subStr), stdin);
+    subStr[strcspn(subStr, "\n")] = '\0';  // remove trailing newline
+
+    printf("Enter the position to insert the substring: ");
+    scanf("%d", &pos);
+
+    int lenMain = strlen(mainStr);
+    int lenSub = strlen(subStr);
+
+    if (pos < 0 || pos > lenMain) {
+        printf("Invalid position.\n");
+        return 1;
+    }
+
+    // Copy characters before position
+    for (i = 0; i < pos; i++) {
+        result[i] = mainStr[i];
+    }
+
+    // Copy substring
+    for (j = 0; j < lenSub; j++) {
+        result[i + j] = subStr[j];
+    }
+
+    // Copy the rest of main string
+    for (; i < lenMain; i++) {
+        result[j + i] = mainStr[i];
+    }
+
+    result[j + i] = '\0';  // null-terminate
+
+    printf("Resultant string: %s\n", result);
+
+    return 0;
+}
+
 ```
+<br>
 
 # P2:
 
 ## 1.	Write a C Program to read two elements dynamically using malloc() function and interchange the two numbers using call by reference.
 ```c
-Solution
+#include <stdio.h>
+#include <stdlib.h>
+
+// Function to swap two numbers using call by reference
+void swap(int *a, int *b) {
+    int temp = *a;
+    *a = *b;
+    *b = temp;
+}
+
+int main() {
+    int *num1, *num2;
+
+    // Dynamically allocate memory for two integers
+    num1 = (int *)malloc(sizeof(int));
+    num2 = (int *)malloc(sizeof(int));
+
+    if (num1 == NULL || num2 == NULL) {
+        printf("Memory allocation failed.\n");
+        return 1;
+    }
+
+    // Input numbers
+    printf("Enter first number: ");
+    scanf("%d", num1);
+
+    printf("Enter second number: ");
+    scanf("%d", num2);
+
+    // Swap using call by reference
+    swap(num1, num2);
+
+    // Output after swap
+    printf("After swapping:\n");
+    printf("First number: %d\n", *num1);
+    printf("Second number: %d\n", *num2);
+
+    // Free allocated memory
+    free(num1);
+    free(num2);
+
+    return 0;
+}
+
 ```
 ## 2.	Write a C Program to delete n characters from given string from the given position .
 ```c
-Solution
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+    char str[200];
+    int pos, n, i, len;
+
+    // Input string
+    printf("Enter the string: ");
+    fgets(str, sizeof(str), stdin);
+    str[strcspn(str, "\n")] = '\0'; // Remove newline if present
+
+    // Input position and number of characters to delete
+    printf("Enter the position to delete from (0-based index): ");
+    scanf("%d", &pos);
+
+    printf("Enter the number of characters to delete: ");
+    scanf("%d", &n);
+
+    len = strlen(str);
+
+    if (pos < 0 || pos >= len || pos + n > len) {
+        printf("Invalid position or number of characters to delete.\n");
+        return 1;
+    }
+
+    // Deletion logic
+    for (i = pos + n; i <= len; i++) {
+        str[i - n] = str[i];
+    }
+
+    printf("Resultant string: %s\n", str);
+
+    return 0;
+}
+
 ```
+
+<br>
 
 # P3:
 
 ## 1.	Write a C Program to read and print the elements of 1-D array using calloc() memory allocation function and reallocate memory for the array by increasing the size of the array, read and print the elements of reallocated array.
 ```c
-Solution
+#include <stdio.h>
+#include <stdlib.h>
+
+int main() {
+    int *arr, i, n, newSize;
+
+    printf("Enter initial size: ");
+    scanf("%d", &n);
+
+    arr = (int *)calloc(n, sizeof(int));
+    if (!arr) return 1;
+
+    printf("Enter %d elements:\n", n);
+    for (i = 0; i < n; i++) scanf("%d", &arr[i]);
+
+    printf("Initial array:\n");
+    for (i = 0; i < n; i++) printf("%d ", arr[i]);
+
+    printf("\nEnter new size: ");
+    scanf("%d", &newSize);
+
+    arr = (int *)realloc(arr, newSize * sizeof(int));
+    if (!arr) return 1;
+
+    printf("Enter %d more elements:\n", newSize - n);
+    for (i = n; i < newSize; i++) scanf("%d", &arr[i]);
+
+    printf("Updated array:\n");
+    for (i = 0; i < newSize; i++) printf("%d ", arr[i]);
+
+    free(arr);
+    return 0;
+}
+
 ```
 ## 2.	Write a C Program to check whether given string is palindrome or not .
 ```c
-Solution
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+    char str[100];
+    int i, len, isPalindrome = 1;
+
+    printf("Enter a string: ");
+    fgets(str, sizeof(str), stdin);
+    str[strcspn(str, "\n")] = '\0'; // Remove newline
+
+    len = strlen(str);
+
+    for (i = 0; i < len / 2; i++) {
+        if (str[i] != str[len - 1 - i]) {
+            isPalindrome = 0;
+            break;
+        }
+    }
+
+    if (isPalindrome)
+        printf("The string is a palindrome.\n");
+    else
+        printf("The string is not a palindrome.\n");
+
+    return 0;
+}
+
 ```
 
+<br>
 
 # P4:
 
 ## 1.	Write a C Program to read and print elements of 1-D array using calloc() memory allocation function.
 ```c
-Solution
+#include <stdio.h>
+#include <stdlib.h>
+
+int main() {
+    int *arr, n, i;
+
+    printf("Enter number of elements: ");
+    scanf("%d", &n);
+
+    // Allocate memory using calloc
+    arr = (int *)calloc(n, sizeof(int));
+    if (arr == NULL) {
+        printf("Memory allocation failed.\n");
+        return 1;
+    }
+
+    // Read elements
+    printf("Enter %d elements:\n", n);
+    for (i = 0; i < n; i++) {
+        scanf("%d", &arr[i]);
+    }
+
+    // Print elements
+    printf("Array elements are:\n");
+    for (i = 0; i < n; i++) {
+        printf("%d ", arr[i]);
+    }
+
+    free(arr);  // Free allocated memory
+    return 0;
+}
+
 ```
 ## 2.	Write a C Program to check the sub string is present in the main string or not. If it present return the position otherwise return -1 .
 ```c
-Solution
+#include <stdio.h>
+#include <string.h>
+
+int main() {
+    char mainStr[200], subStr[100];
+    char *pos;
+
+    printf("Enter main string: ");
+    fgets(mainStr, sizeof(mainStr), stdin);
+    mainStr[strcspn(mainStr, "\n")] = '\0';
+
+    printf("Enter substring: ");
+    fgets(subStr, sizeof(subStr), stdin);
+    subStr[strcspn(subStr, "\n")] = '\0';
+
+    // Find substring using strstr
+    pos = strstr(mainStr, subStr);
+
+    if (pos != NULL)
+        printf("Substring found at position: %ld\n", pos - mainStr);
+    else
+        printf("Substring not found. Return: -1\n");
+
+    return 0;
+}
+
 ```
 
+<br>
 
 # P5:
 
 ## 1.	Write a C Program to print 2-D array using pointers.
 ```c
-Solution
+#include <stdio.h>
+
+int main() {
+    int row, col, i, j;
+
+    printf("Enter rows and columns: ");
+    scanf("%d %d", &row, &col);
+
+    int arr[row][col];
+
+    printf("Enter elements:\n");
+    for (i = 0; i < row; i++) {
+        for (j = 0; j < col; j++) {
+            *(*(arr + i) + j) = 0; // Initialize (optional)
+            scanf("%d", (*(arr + i) + j));
+        }
+    }
+
+    printf("2-D Array:\n");
+    for (i = 0; i < row; i++) {
+        for (j = 0; j < col; j++) {
+            printf("%d ", *(*(arr + i) + j));
+        }
+        printf("\n");
+    }
+
+    return 0;
+}
+
 ```
 ## 2.	Write a C program to count number of vowels, consonants, digits and special characters in a given string.
 ```c
-Solution
+#include <stdio.h>
+#include <ctype.h>
+
+int main() {
+    char str[200];
+    int vowels = 0, consonants = 0, digits = 0, special = 0;
+    int i;
+
+    printf("Enter a string: ");
+    fgets(str, sizeof(str), stdin);
+
+    for (i = 0; str[i] != '\0'; i++) {
+        char ch = str[i];
+
+        if (isalpha(ch)) {
+            ch = tolower(ch);
+            if (ch == 'a' || ch == 'e' || ch == 'i' || ch == 'o' || ch == 'u')
+                vowels++;
+            else
+                consonants++;
+        } else if (isdigit(ch)) {
+            digits++;
+        } else if (!isspace(ch)) {
+            special++;
+        }
+    }
+
+    printf("Vowels: %d\n", vowels);
+    printf("Consonants: %d\n", consonants);
+    printf("Digits: %d\n", digits);
+    printf("Special characters: %d\n", special);
+
+    return 0;
+}
+
 ```
